--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "react/prop-types": [0],
+    "react/react-in-jsx-scope": [0],
+    "no-console": [1],
+    "react-hooks/rules-of-hooks": [2],
+    "react-hooks/exhaustive-deps": [2],
+    "react/no-array-index-key": [1],
+    "react/sort-prop-types": [1],
+    "react/no-unknown-property": [1, { "ignore": ["css"] }],
+    "react/no-unused-prop-types": [1],
+    "react/no-unused-class-component-methods": [1]
+  }
 }
