--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "lucide-react": "^0.331.0",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
