--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": ["next/core-web-vitals", "eslint:recommended", "next", "prettier"],
   "rules": {
     "react/prop-types": [0],
     "react/react-in-jsx-scope": [0],
