--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.24.6",
     "clsx": "^2.1.0",
+    "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.331.0",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
@@ -20,6 +22,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.20.1",
+    "@tanstack/react-query-devtools": "^5.24.6",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
