--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lucide-react": "^0.331.0",
     "mongodb": "^6.3.0",
     "next": "14.1.0",
-    "next-auth": "^4.24.6",
+    "next-auth": "5.0.0-beta.16",
     "react": "^18",
     "react-dom": "^18",
     "sharp": "^0.33.2",
