--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
     "lucide-react": "^0.331.0",
+    "mapbox-gl": "^3.3.0",
     "mongodb": "^6.3.0",
-    "next": "14.1.0",
+    "next": "14.2.3",
     "next-auth": "5.0.0-beta.16",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-map-gl": "^7.1.7",
     "sharp": "^0.33.2",
     "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
@@ -27,7 +29,7 @@
     "@tanstack/react-query-devtools": "^5.24.6",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
