--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.106.0",
+    "@react-three/fiber": "^8.16.8",
     "@tanstack/react-query": "^5.24.6",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.0.0",
@@ -21,7 +23,9 @@
     "react-dom": "^18.3.1",
     "react-map-gl": "^7.1.7",
     "sharp": "^0.33.2",
+    "three": "^0.165.0",
     "use-debounce": "^10.0.0",
+    "uuid": "^10.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
