--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@tanstack/eslint-plugin-query": "^5.20.1",
     "@tanstack/react-query-devtools": "^5.24.6",
     "autoprefixer": "^10.4.17",
-    "eslint": "^9.10.0",
+    "eslint": "8.56.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.35",
